added new dtos and updated old+added dockerfile generations there are some problems with addind data to new start<next>.json file, need to fix it correctly now only one model works